# NanoCameleer

./: .gitignore  Cargo.toml  LICENSE  README.md  main.m  package.sh  walkthrough.md
camelid/: .gitignore  ARCHITECTURE.md  ATTENTION_CHECKPOINTS.md  BENCHMARKS.md  COMPATIBILITY.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  DOCS.md  FORGELOCAL_INTEGRATION.md  FULL_SUPPORT_BLOCKER_MATRIX.md  INFERENCE_RECON.md  NAMING_AUDIT.md  PARITY.md  QA_LLAMA32_3B_Q8_ACCEPTANCE.md  QA_SMALL_MODEL_PARITY_MATRIX.md  README.md  REPO_READINESS_PLAN.md  ROADMAP.md  ROADMAP_ARCHIVE.md  SAFETENSORS_PLAN.md  SAMPLING_API_RECON.md  SECURITY.md  SMALL_MODEL_CANDIDATES.json  STATUS.md  STATUS_ARCHIVE_2026-04.md  TENSOR_RECON.md  THIRD_PARTY_NOTICES.md  TOKENIZER_RECON.md  build.rs  merge.out
camelid/.github/: pull_request_template.md
camelid/docs/: CONFIGURATION.md  CONTRIBUTOR_QUICKSTART.md  VALIDATION_MATRIX.md  housekeeping-check.md
camelid/examples/: dump_camelid_layer0.rs
camelid/fixtures/: README.md  llama32-1b-audit-pack.json
camelid/frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
camelid/scripts/: audit-evidence-bundle-privacy.mjs  bench-dense-hotloops.mjs  bench-generation-prompts.mjs  bench-llama3-same-host.mjs  bench-mlx-memory.mjs  bench-q8-hotpath-bundle.mjs  bench-unique-chat.mjs  chat-parity-llama3.mjs  chat-parity-mistral.mjs  chat-parity-tinyllama.mjs  check-attention-checkpoints.mjs  check-evidence-bundle-checksums.sh  check-forward-trace-invariants.mjs  check-output-projection-layout.mjs  check-public-evidence-claims.mjs  check-public-scrub.sh  compare-attention-checkpoints.mjs  compare-dense-checkpoints.mjs  compare-dense-stage-flow.mjs  compare-forward-traces.mjs  compare-tensor-dumps.mjs  correlate-prompt-token-rows.mjs  edge-prompt-gate-report.mjs  extract-attention-checkpoints.mjs  extract-forward-trace.mjs  llama3-tokenizer-reference.mjs  mistral-reference-pack.mjs  (+35 more)
camelid/src/: main.rs
(+1291 files in other folders)
